@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-08T08:15:00Z",
+  "timestamp" : "2023-07-09T08:14:42Z",
   "count_outdated" : 128,
   "uniques_outdated" : 108,
-  "count" : 144,
-  "uniques" : 119,
+  "count" : 145,
+  "uniques" : 120,
   "clones" : [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2023-07-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
